# dotbee

./: .gitlab-ci.yml  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  GEMINI.md  LICENSE  README.md  ROADMAP.md  TODO.md  dotsy.excalidraw  lefthook.yml  mise.toml  readme.md  rust-toolchain.toml  rustfmt.toml
.gitlab-ci/: build.yml  release.yml  validation.yml
.mise-tasks/: try-dotbee  try-dotsy
.mise-tasks/format/: _default  rust  toml
.mise-tasks/lint/: _default  rust
crates/config/src/: conflict.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs  message.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
example/: dotbee.toml  dotsy.toml
example/global/: note.txt
example/global/.config/: something.txt
example/hosts/bar/editor/.config/zed/: settings.json
example/hosts/bar/rioterm/.config/rio/: config.toml
example/hosts/baz/nushell/.config/nushell/: config.nu
example/hosts/desktop/.config/zed/: keymap.json
example/hosts/foo/.config/kitty/: kitty.conf
example/hosts/foo/.config/kitty/settings/: core.conf  keymaps.conf
example/hosts/foo/.config/mako/: config
example/hosts/foo/editor/.config/neovide/: config.toml
example/hosts/foo/niri-wm/.config/kitty/settings/: init.conf
example/hosts/foo/niri-wm/.config/kitty/settings/style/: font.conf  window.conf
example/hosts/foo/niri-wm/.config/niri/: config.kdl
example/hosts/foo/niri-wm/.config/waybar/: config.jsonc
example/hosts/foo/niri-wm/.config/wofi/: style.css
example/hosts/laptop/: .zshrc
example/hosts/laptop/.config/kitty/settings/style/: tabs.conf
example/hosts/laptop/.config/nvim/: init.lua
example/hosts/laptop/.config/waybar/: style.css
example/profiles/global/nvim/: .emmyrc.json  init.lua
mise-tasks/: build-container.sh  run-container.sh
schema/: dotbee.json  dotsy.json
src/: cli.rs  context.rs  lib.rs  main.rs  state.rs  util.rs  utils.rs
src/commands/: init.rs  list.rs  purge.rs  repair.rs  switch.rs
src/config/: conflict.rs  dotsy.toml  hooks.rs  icons.rs  mod.rs
src/context/: message.rs  mod.rs
src/context/manager/: mod.rs
src/context/manager/config/: conflict.rs  dotbee.toml  mod.rs
src/context/manager/state/: mod.rs
src/state/: mod.rs
src/subcommands/: completion.rs  doctor.rs  init.rs  list.rs  mod.rs  purge.rs  repair.rs  switch.rs
tests/: utils.rs
