[package]
name = "dotsy"
version = "0.2.1"
authors = ["Rogue87 <rogue87@tuta.io>"]
description = "Dotfiles manager designed for ease of use"
edition = "2024"
repository = "https://gitlab.com/rogue87/dotsy"
keywords = ["dotsy", "dotfiles"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.92.0"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.65"
indexmap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
colored = { workspace = true }
nix = { workspace = true }
config = { path = "./crates/config/" }
context = { path = "./crates/context/" }
state = { path = "./crates/state/" }
utils = { path = "./crates/utils/" }


[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
colored = "3.0.0"
demand = "1.7.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
taplo = "0.14.0"
toml = { version = "0.9.10", features = ["parse"] }
nix = { version = "0.31.1", features = ["hostname"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde_json = "1.0.140"


[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.2.2"

[dev-dependencies]
tempfile = "3.25.0"
