[package]
name = "dotbee"
version = "0.4.0"
authors = ["Rogue87 <rogue87@tuta.io>"]
description = "Dotfiles manager designed for ease of use"
edition = "2024"
repository = "https://gitlab.com/rogue-sly/dotbee"
keywords = ["dotbee", "dotfiles"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.95.0"
exclude = [".gitlab-ci.yml", ".gitlab-ci/*", "mise.toml", ".mise-tasks/*"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.0.0"
demand = "1.7.0"
dirs = "6.0.0"
indexmap = { version = "2.2.6", features = ["serde"] }
nix = { version = "0.31.1", features = ["hostname"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2"
toml = { version = "0.9.10", features = ["parse"] }
