[package]
name = "context"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = { workspace = true }
demand = { workspace = true }
dirs = { workspace = true }
indexmap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
# members deps
state = { path = "../state/" }
config = { path = "../config/" }
